<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:background="@drawable/diastyle"
    android:layout_marginLeft="10dp"
	android:layout_marginRight="10dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dialogcomtxt"
        android:layout_marginTop="15dp"
        android:text="@string/pwad" />

    <EditText
        android:id="@+id/upwd"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#ffffff"
        android:hint="@string/pwada"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:ems="10" >
    </EditText>
   
        
        
<RelativeLayout 
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
  <Button
        android:id="@+id/rback"
        android:layout_width="100dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:background="@drawable/bcomlinee"
        android:text="@string/rback"
        android:textColor="#ffffff"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
         />
    
    <Button
        android:id="@+id/sawa"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/bcomlinee"
        android:text="@string/enda"
        android:textColor="#ffffff"
        android:textStyle="bold" />  
        
 </RelativeLayout>
</LinearLayout>