<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <TextView
		        android:id="@+id/textView22"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:layout_marginTop="20dp"
		        android:gravity="center"
		        android:textColor="#66000000" 
		        android:text="@string/support"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textStyle="bold" />
    
 
        
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:contentDescription="@string/enda"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/abu" />
            
               
   <TextView 
			    android:id="@+id/txte"
			    android:layout_width="wrap_content"
			    android:layout_gravity="center"
			    android:layout_margin="4dp"
			    android:background="#ffffff"
			    android:scrollbars="vertical"
			    android:scrollbarStyle="insideInset"
			    android:padding="1dp"
			    android:text="@string/stst"
			    android:textColor="@android:color/black"
			    android:textSize="14sp"
			    android:layout_height="150dp"
            />
  
   <Button
        android:id="@+id/rback"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="5dp"
        android:background="@drawable/comlinee"
        android:textStyle="bold"
        android:text="@string/rback"
        android:textColor="@android:color/background_light" />
  
    </LinearLayout>