<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="top"
    android:background="#FFFFFF"
    android:layout_margin="5dp"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/title6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="Rangelands"
        android:textColor="@color/colorThemeTitle"
        android:textStyle="bold"
        android:textSize="17sp" />

    <ScrollView
        android:id="@+id/scrolli"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            >


           <!-- <TextView
                android:id="@+id/nomi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:text="Vegatation Type"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/s1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nomi"
                android:layout_alignLeft="@+id/nomi"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:entries="@array/watertype"
                android:prompt="@string/twater" />-->

            <TextView
                android:id="@+id/nomi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:text="Rangeland Cover : "
                android:textSize="16sp" />

            <TextView
                android:id="@+id/s1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="italic"
                android:layout_toRightOf="@+id/nomi"

                />

            <EditText
                android:id="@+id/s87"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:enabled="false"
                android:singleLine="true"
                android:hint="@string/s8a"
                android:layout_below="@+id/nomi"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

           <!-- <TextView
                android:id="@+id/nomi31e"
                android:layout_below="@+id/s1"
                android:layout_width="wrap_content"
                android:layout_alignLeft="@+id/nomi"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:text="Source Seasonality"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/radiops2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nomi31e"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/neww"
                    android:layout_width="match_parent"
                    android:background="@drawable/ybb"
                    android:button="@null"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:checked="true"
                    android:gravity="center"
                    android:textColor="@drawable/a"
                    android:text="@string/tn" />

                <RadioButton
                    android:id="@+id/prevv"
                    android:layout_width="match_parent"
                    android:background="@drawable/ybb"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:button="@null"
                    android:textColor="@drawable/a"
                    android:text="@string/ty" />
            </RadioGroup>-->


            <TextView
                android:id="@+id/nomi31eq"
                android:layout_below="@+id/s87"
                android:layout_width="wrap_content"
                android:layout_alignLeft="@+id/nomi"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:text="Comments"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/s7"
                android:layout_width="fill_parent"
                android:layout_height="130dp"
                android:layout_below="@+id/nomi31eq"
                android:background="@drawable/comline"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:padding="4dp"
                android:layout_marginTop="3dp"
                android:layout_margin="1dp"
                android:layout_alignLeft="@+id/nomi"
                android:hint="@string/t16"
                />


            <TextView
                android:id="@+id/nomi12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="#000000"
                android:layout_below="@+id/s7"
                android:layout_alignLeft="@+id/nomi"
                android:textSize="16sp"
                android:text="Scenario Photograph" />

            <RelativeLayout
                android:id="@+id/profpic"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/nomi12"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/s12pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/noimage"
                    android:layout_alignParentLeft="true"
                    />

                <Button
                    android:id="@+id/bfopic"
                    android:layout_width="150dp"
                    android:layout_centerInParent="true"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/comlinee"
                    android:text="Take Photo"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold" />
            </RelativeLayout>






        </RelativeLayout>
    </ScrollView>




    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/backo"
            android:layout_width="100dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/comlinee"
            android:textColor="@android:color/background_light"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/rback" />

        <Button
            android:id="@+id/doneo"
            android:layout_margin="10dp"
            android:layout_width="100dp"
            android:background="@drawable/comlinee"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/background_light"
            android:layout_height="wrap_content"
            android:text="@string/savo" />




    </RelativeLayout>

</LinearLayout>