<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:background="@drawable/dodok_0"
    android:orientation="vertical" >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:weightSum="100">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="40"
                        android:gravity="center">

                    <ImageView
                        android:id="@+id/imgga"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/savannahicon" />

                    <TextView
                        android:id="@+id/ttl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imgga"
                        android:layout_centerHorizontal="true"
                        android:textSize="15sp"
                        android:text="Register"
                        android:textColor="@color/colorAccent"
                        />
                    </RelativeLayout>




    <!--<TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal|top"
        android:textColor="@color/colorMainTitle"
        android:text="@string/reggo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />-->
    
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal|top"

        >
    
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:gravity="center"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textIL1"
            android:layout_alignParentLeft="true"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:theme="@style/TextLabel"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines = "1"
                android:hint="@string/fulnem"
                android:textColor="@color/colorWhiteText"
                android:ems="10"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textIL2"
            android:layout_alignLeft="@+id/textIL1"
            android:layout_below="@+id/textIL1"
            android:layout_alignParentLeft="true"
            android:layout_width="match_parent"
            android:theme="@style/TextLabel"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/uphoneno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines = "1"
                android:maxLength="10"
                android:textColor="@color/colorWhiteText"
                android:inputType="phone"
                android:hint="@string/fono"
                android:ems="10"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textIL3"
            android:layout_alignLeft="@+id/textIL2"
            android:layout_below="@+id/textIL2"
            android:layout_alignParentLeft="true"
            android:layout_width="match_parent"
            android:theme="@style/TextLabel"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/uemailo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines = "1"
                android:textColor="@color/colorWhiteText"
                android:inputType="textEmailAddress"
                android:hint="@string/emailad"
                android:ems="10"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textIL6"
            android:layout_alignLeft="@+id/textIL4"
            android:layout_below="@+id/textIL4"
            android:layout_alignParentLeft="true"
            android:layout_width="match_parent"
            android:theme="@style/TextLabel"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/upasso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines = "1"
                android:textColor="@color/colorWhiteText"
                android:inputType="textPassword"
                android:hint="password"
                android:ems="10"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textIL7"
            android:layout_alignLeft="@+id/textIL6"
            android:layout_below="@+id/textIL6"
            android:layout_alignParentLeft="true"
            android:layout_width="match_parent"
            android:theme="@style/TextLabel"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/upasso2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines = "1"
                android:textColor="@color/colorWhiteText"
                android:inputType="textPassword"
                android:hint="Confirm Password"
                android:ems="10"
                />
        </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_alignLeft="@+id/textIL7"
                android:layout_below="@+id/textIL7"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textIL8"
                        android:textColor="@color/colorAccent"
                        android:text="@string/countrii" />

                    <TextView
                        android:id="@+id/textView333"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/textIL8"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/colorMainTitle"
                        android:textStyle="bold"

                         />
            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>
    
    </ScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_height="wrap_content"
                >


                <!-- <Button
                     android:id="@+id/rback"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
                     android:layout_marginTop="20dp"
                     android:layout_alignParentLeft="true"
                     android:background="@drawable/comlinee"
                     android:text="@string/rback"
                     android:textColor="@android:color/background_light" />-->

                <Button
                    android:id="@+id/logreg"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/comlineemain"
                    android:text="Register"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_dark"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>






    
</LinearLayout>
